--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,9 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching Experience"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+Work in Progress. Updates coming soon.
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
